[package]
edition = "2021"
name = "strata-test-utils-checkpoint"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
ssz.workspace = true
strata-asm-common.workspace = true
strata-asm-txs-checkpoint.workspace = true
strata-checkpoint-types-ssz.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-merkle.workspace = true
strata-predicate.workspace = true
strata-test-utils-arb.workspace = true
strata-test-utils-btc.workspace = true

borsh.workspace = true
k256.workspace = true
rand.workspace = true
