[package]
edition = "2021"
name = "guest-sp1-moho"
version = "0.1.0"

[workspace]

[dependencies]
# FIXME: (@prajwolrg) use a proper tag after https://github.com/alpenlabs/moho/pull/72/ is merged
moho-recursive-proof = { git = "https://github.com/alpenlabs/moho", rev = "dd329ef9d5b1ca69d567a3a685498b4ca2330a2e" }
zkaleido-sp1-guest-env = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc21" }

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
secp256k1-sys = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
bn = { git = "https://github.com/sp1-patches/bn", package = "substrate-bn", tag = "patch-0.6.0-sp1-5.0.0" }
