[package]
name = "strata-asm-proto-checkpoint-txs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-codec.workspace = true
strata-codec-utils.workspace = true
strata-l1-envelope-fmt.workspace = true
strata-l1-txfmt.workspace = true

bitcoin.workspace = true
thiserror.workspace = true
